# html-Parser

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.68AF443ED7936C37.idx
html/: 实验02_case00.html  实验02_case00_bad.html  实验02_case01.html  实验02_case11.html  实验02_case12.html  实验02_case13.html
html/cache/: downloaded.html
inc/: customstack.h  custumstack.h  htmlparser.h
inc/XpathParser/: xpath_parser.h
inc/css_selector/: CssSelector.h  selector.h
inc/datastructure/: customlist.h  customstack.h  customtree.h
inc/interface/: interface.h
inc/xpath/: xpath.h
inc/xpath_parser/: xpath_parser.h
src/: main.cpp
src/XpathParser/: xpath_parser.cpp
src/css_selector/: CssSelector.cpp  selector.cpp
src/html_parser/: CMakeLists.txt  htmlparser.cpp
src/interface/: CMakeLists.txt  interface.cpp
src/parser/: CMakeLists.txt  htmlparser.cpp
src/xpath/: xpath.cpp
src/xpath_parser/: CMakeLists.txt  xpath_parser.cpp
